array function update

--- a/32 Tab Selection by new attribute by data-attribute/assets/css/style.css
+++ b/32 Tab Selection by new attribute by data-attribute/assets/css/style.css
@@ -32,9 +32,9 @@
 .tapHeading li:hover, .tapHeading:focus,.tapHeading:active,.tapHeading .active{
     background-color: orange;
 }
-/* .contPara .activePara{
+.contPara .activePara{
 display: block;
-} */
+}
 .tabContent{
     padding: 20px;
     display: none;
